--- a/mywebpage.html
+++ b/mywebpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webpage</title>
+    <title>pagechange</title>
 </head>
 <body>
     <script>
@@ -61,6 +61,7 @@ device 3
     width: 100vw;
     height: 10vh;
     border: 1px solid;
+    background-color: aqua;
     }
     .mainSection{
         height: 80vh;
